# SaveCoin

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  buildclient.sh  buildclient_unix.sh  config.status  configure  configure.ac  setup.py
contrib/: README.md  SaveCoin-qt.pro  SaveCoind.bash-completion  SpeedCoin-qt.pro  SpeedCoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  SaveCoin-qt.desktop  SaveCoin-qt.install  SaveCoin-qt.lintian-overrides  SaveCoin-qt.protocol  SaveCoind.bash-completion  SaveCoind.examples  SaveCoind.install  SaveCoind.lintian-overrides  SaveCoind.manpages  SpeedCoin-qt.desktop  SpeedCoin-qt.install  SpeedCoin-qt.lintian-overrides  SpeedCoin-qt.protocol  SpeedCoind.bash-completion  SpeedCoind.examples  SpeedCoind.install  SpeedCoind.lintian-overrides  SpeedCoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md
jsonrpc/: authproxy.py  proxy.py
qa/pull-tester/: build-tests.sh  build-tests.sh.in  pull-tester.py  pull-tester.sh  run-SaveCoind-for-test.sh.in  run-SpeedCoind-for-test.sh  run-SpeedCoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi  setup.nsi.in  ui.rc
share/qt/: Info.plist  (+3 more)
src/: .gitignore  Makefile.am  Makefile.include  SaveCoin-cli-res.rc  SaveCoin-cli.cpp  SaveCoind-res.rc  SaveCoind.cpp  SpeedCoin-cli-res.rc  SpeedCoin-cli.cpp  SpeedCoind-res.rc  SpeedCoind.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  (+52 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: SaveCoin_find_bdb48.m4  SaveCoin_qt.m4  SaveCoin_subdir_to_include.m4  SpeedCoin_find_bdb48.m4  SpeedCoin_qt.m4  SpeedCoin_subdir_to_include.m4
src/qt/: Makefile.am  SaveCoin.cpp  SaveCoin.qrc  SaveCoinaddressvalidator.cpp  SaveCoinaddressvalidator.h  SaveCoinamountfield.cpp  SaveCoinamountfield.h  SaveCoingui.cpp  SaveCoingui.h  SaveCoinstrings.cpp  SaveCoinunits.cpp  SaveCoinunits.h  SpeedCoin.cpp  SpeedCoin.qrc  SpeedCoinaddressvalidator.cpp  SpeedCoinaddressvalidator.h  SpeedCoinamountfield.cpp  SpeedCoinamountfield.h  SpeedCoingui.cpp  SpeedCoingui.h  SpeedCoinstrings.cpp  SpeedCoinunits.cpp  SpeedCoinunits.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  (+69 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: SaveCoin_ach.ts  SaveCoin_af_ZA.ts  SaveCoin_ar.ts  SaveCoin_be_BY.ts  SaveCoin_bg.ts  SaveCoin_bs.ts  SaveCoin_ca.ts  SaveCoin_ca@valencia.ts  SaveCoin_ca_ES.ts  SaveCoin_cmn.ts  SaveCoin_cs.ts  SaveCoin_cy.ts  SaveCoin_da.ts  SaveCoin_de.ts  SaveCoin_de_AT.ts  SaveCoin_el_GR.ts  SaveCoin_en.ts  SaveCoin_eo.ts  SaveCoin_es.ts  SaveCoin_es_CL.ts  SaveCoin_es_DO.ts  SaveCoin_es_MX.ts  SaveCoin_es_UY.ts  SaveCoin_et.ts  SaveCoin_eu_ES.ts  SaveCoin_fa.ts  SaveCoin_fa_IR.ts  SaveCoin_fi.ts  SaveCoin_fr.ts  SaveCoin_fr_CA.ts  SaveCoin_gl.ts  SaveCoin_gu_IN.ts  SaveCoin_he.ts  SaveCoin_hi_IN.ts  SaveCoin_hr.ts  SaveCoin_hu.ts  SaveCoin_id_ID.ts  SaveCoin_it.ts  SaveCoin_ja.ts  SaveCoin_ka.ts  (+102 more)
src/qt/res/: SaveCoin-qt-res.rc  SpeedCoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_SaveCoin.cpp  test_SpeedCoin.cpp  transaction_tests.cpp  util_tests.cpp  wallet_tests.cpp
(+23 files in other folders)
